fix header content use gap instead of flow

--- a/main/assets/css/blocks/_index.scss
+++ b/main/assets/css/blocks/_index.scss
@@ -2,6 +2,11 @@
 
 .index {
 
+  .wrapper {
+    max-width: 1400px;
+    margin-inline: auto;
+  }
+
   .wrapper.flow {
     --flow-space: var(--space-4xl);
   }
@@ -14,6 +19,12 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
+  }
+
+  .header-content {
+    display: grid;
+    justify-content: center;
+    gap: var(--space-m);
   }
 
   .tour {
@@ -54,19 +65,21 @@
   @include for-tablet-portrait-up {
 
     header {
-      display: grid;
-       grid-template-columns: 1fr 1fr;
+      padding-block: 122px;
+      background: url('../images/tablet/image-hero.jpg') no-repeat;
+      @media (-webkit-min-device-pixel-ratio: 2) {
+        background: url('../images/tablet/image-hero@2x.jpg') no-repeat;
+      }
+    }
+
+    .hero {
+      display: none;
     }
 
     .header-content {
-      align-self: center;
+      justify-content: end;
     }
 
-    .hero-image {
-      width: auto;
-      height: auto;
-      object-fit: unset;
-    }
     .social {
       justify-content: flex-end;
     }
@@ -76,36 +89,38 @@
 
     header {
       position: relative;
-    }
+      padding-block: 130px 330px;
+      background: url('../images/desktop/image-hero.jpg') no-repeat;
 
-    .hero {
-      justify-self: end;
-      position: relative;
-      z-index: -1;
-
-    }
-
-    .hero::before {
-      content: '';
-      position: absolute;
-      inset: 0;
-      left: -100%;
-      background-color: black;
-      z-index: -1;
-    }
+        @media (-webkit-min-device-pixel-ratio: 2) {
+          background: url('../images/desktop/image-hero@2x.jpg') no-repeat;
+        }
+      background-position: center center;
+      &:before {
+        content: '';
+        position: absolute;
+        inset: 0;
+        width: 50vw;
+        background-color: var(--color-primary);
+        z-index: -1;
+      }
+      }
 
     .header-content {
-      margin-top: -11rem;
-      justify-self: end;
-      p {
-        margin-top: 0;
+      grid-template-columns: 1fr 24ch;
+      justify-content: space-between;
+      h1 {
+        color: var(--color-white);
+        mix-blend-mode: difference;
+        filter: brightness(1.5);
+      }
+      > :not(:first-child) {
+        grid-column: 2;
+
       }
     }
 
-    .header-content h1 {
-      position: absolute;
-      left: var(--page-padding);
-    }
+
 
   }
 }
