--- a/main/assets/css/global-styles/_breakpoints.scss
+++ b/main/assets/css/global-styles/_breakpoints.scss
@@ -12,10 +12,10 @@
   @media (max-width: 599px) { @content; }
 }
 @mixin for-tablet-portrait-up {
-  @media (min-width: 600px) { @content; }
+  @media (min-width: 700px) { @content; }
 }
 @mixin for-tablet-portrait-only {
-  @media (min-width: 600px) and (max-width: 972px) { @content; }
+  @media (min-width: 700px) and (max-width: 972px) { @content; }
 }
 @mixin for-tablet-landscape-up {
   @media (min-width: 973px) { @content; }
