--- a/main/assets/css/global-styles/_measure.scss
+++ b/main/assets/css/global-styles/_measure.scss
@@ -1,5 +1,5 @@
 :root {
-  --measure: 30ch;
+  --measure: 28ch;
 }
 
 * {
